--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,11 +1,41 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title> login </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <ion-button href="tabs"> next </ion-button>
-</ion-content>
-
-
+<div class="container">
+  <div class="title">
+    <svg-icon
+      src="assets/Icons/login/logoGpn.svg"
+      [svgStyle]="{
+        'height': '7.3vh',
+        'width': 'auto'
+      }"
+    ></svg-icon>
+    <div class="title__text">
+      ДОСТОВЕРНОСТЬ
+      <br>
+      ОТБОРА ПРОБ
+    </div>
+  </div>
+  <div class="main-icon">
+    <img src="assets/Icons/login/car.png">
+  </div>
+  <form [formGroup]="loginForm">
+    <div class="input-container">
+      <input type="text" name="login" required formControlName="login" autocomplete="off">
+      <label for="login">
+        <span class="input-title">Логин</span>
+      </label>
+    </div>
+    <div class="input-container">
+      <input type="password" name="pass" required formControlName="pass" autocomplete="off">
+      <label for="pass">
+        <span class="input-title">Пароль</span>
+      </label>
+    </div>
+  </form>
+  <div class="forgot-password">
+    <a href="#">Забыли пароль?</a>
+  </div>
+  <button
+    class="btn"
+    (click)="submit($event)"
+    [disabled]="!loginForm.valid"
+  >Войти</button>
+</div>
