add android + keyboard service

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div #content class="container">
   <div class="title">
     <svg-icon
       src="assets/Icons/login/logoGpn.svg"
