--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
@@ -1,9 +1,1 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs-tasks</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<h1>tabs-tasks</h1>
