--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,10 +1,25 @@
 <div class="container">
-  <ion-router-outlet  (activate)="routing($event)" class="page-wrapper"></ion-router-outlet>
+  <app-header>
+    <span class="title">Статистика</span>
+  </app-header>
+  <ion-router-outlet  (activate)="routing($event)" class="page-wrapper">
+    <div class="shadow"></div>
+    <div class="shadow"></div>
+  </ion-router-outlet>
   <div class="footer">
     <div *ngFor="let tab of tabs"
       class="tab-icon"
-      [class.tab-icon__active]="tab === (currentTab$ | async)"
+      [class.tab-icon_active]="tab.route === (currentTab$ | async)"
       (click)="selectTab(tab)"
-    ></div>
+    >
+      <svg-icon
+          src="assets/Icons/tabs/{{tab.route}}.svg"
+          [svgStyle]="{
+            'height': '3.4vh',
+            'width': 'auto'
+          }"
+      ></svg-icon>
+      <span>{{tab.name}}</span>
+    </div>
   </div>
 </div>
