--- a/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
+++ b/src/app/pages/tabs/pages/tabs-ready/tabs-ready.page.html
@@ -1,9 +1,1 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs-ready</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<h1>tabs-ready</h1>
