--- a/src/app/pages/login/components/car-popower/car-popower.component.scss
+++ b/src/app/pages/login/components/car-popower/car-popower.component.scss
@@ -55,7 +55,7 @@ button {
       justify-content: center;
 
       background: rgba(48, 53, 73, 0.5);
-      border-radius: sizeWidth(8);
+      border-radius: sizeHeight(8);
 
       font-size: sizeHeight(36);
       color: #8C99B2;
@@ -80,7 +80,7 @@ button {
       align-items: center;
       justify-content: center;
 
-      border-radius: sizeWidth(8);
+      border-radius: sizeHeight(8);
 
       font-size: sizeHeight(36);
 
