--- a/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
+++ b/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
@@ -1,3 +1,6 @@
+<app-header>
+  <span class="title">Статистика</span>
+</app-header>
 <div class="container">
   <div class="chart-container">
     <div class="chart" #chart>
