--- a/src/app/@shared/avatar-modal/avatar-modal.component.scss
+++ b/src/app/@shared/avatar-modal/avatar-modal.component.scss
@@ -64,7 +64,7 @@ button {
       align-items: center;
 
       border: sizeHeight(1) solid #4B5169;
-      border-radius: sizeWidth(8);
+      border-radius: sizeHeight(8);
 
       position: relative;
 
@@ -148,7 +148,7 @@ button {
     &_active {
       .dropdown {
 
-        border-radius: sizeWidth(8) sizeWidth(8) 0 0;
+        border-radius: sizeHeight(8) sizeHeight(8) 0 0;
 
         svg-icon {
           transform: rotate(180deg);
@@ -175,7 +175,7 @@ button {
     justify-content: center;
 
     background: #303549;
-    border-radius: sizeWidth(8);
+    border-radius: sizeHeight(8);
 
     font-size: sizeHeight(36);
     color: #D7E2F2;
