--- a/src/app/@shared/header/header.component.scss
+++ b/src/app/@shared/header/header.component.scss
@@ -6,7 +6,7 @@
 .container {
   height: sizeHeight(128);
   width: 100%;
-  padding: sizeWidth(30);
+  padding-right: sizeWidth(30);
 
   display: flex;
   align-items: center;
