--- a/src/app/pages/tabs/tabs.page.scss
+++ b/src/app/pages/tabs/tabs.page.scss
@@ -9,13 +9,6 @@
   height: 100%;
   background: #1C1F2B;
 
-  .title {
-    font-weight: 500;
-    font-size: sizeHeight(36);
-
-    color: #D7E2F2;
-  }
-
   .page-wrapper {
     position: relative;
     width: 100%;
@@ -30,7 +23,7 @@
       bottom: 0;
 
       &:first-child {
-        top: 0;
+        top: 10vh;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) -0.04%, rgba(25, 28, 44, 0) 99.96%);
       }
     }
