--- a/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
+++ b/src/app/pages/tabs/pages/tabs-main/tabs-main.page.html
@@ -1,3 +1,7 @@
+<app-header>
+  <span class="header__title">Статистика</span>
+</app-header>
+tashed changes
 <div class="container">
   <div class="chart-container">
     <div class="chart" #chart>
@@ -20,6 +24,7 @@
       class="description-item"
       *ngFor="let item of (diagramData$ | async).sections"
       [style.borderColor]="item.color"
+      (click)="redirectToTab(item.name)"
     >
       <span class="title">{{item.name}}</span>
       <span class="value">{{item.value}}</span>
