--- a/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/components/tabs-tasks-card/tabs-tasks-card.component.html
@@ -1,6 +1,6 @@
 <div
   class="item"
-  [class.item_active]="false"
+  [class.item_active]="isActive"
 >
   <div class="chart" #chart>
     <div class="chart__info">
