--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -1,9 +1,83 @@
+@import "src/theme/functions";
+* {
+  box-sizing: border-box;
+}
+
 .container {
   display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
   background: darkgray;
+
+  position: relative;
+
+  .header {
+    width: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    .title {
+      margin-left: sizeWidth(20);
+      font-size: sizeHeight(42);
+      color: #D7E2F2;
+    }
+
+    .arrow {
+      height: 3.9vh;
+      width: 3.9vh;
+      margin-left: sizeWidth(30);
+
+      color: #606580;
+    }
+  }
+
+  .progress {
+    height: sizeHeight(130);
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+
+    position: absolute;
+    bottom: sizeHeight(40);
+  }
+
+  .circle-btn {
+    height: sizeHeight(114);
+    width: sizeHeight(114);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: #0089FF;
+    border-radius: 50%;
+
+    font-size: sizeHeight(40);
+    color: #FFFFFF;
+
+    position: absolute;
+    right: sizeHeight(30);
+    bottom: 15vh;
+
+    svg-icon {
+      height: 3.9vh;
+    }
+  }
+
+  .geo {
+    background: rgba(96, 101, 128, 0.25);
+    border: 1px solid #606580;
+
+    svg-icon {
+      height: 6.3vh;
+    }
+
+    left: sizeHeight(30);
+  }
 
   .box {
     margin: auto;
