--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
@@ -20,14 +20,16 @@
           [data]="item"
         ></app-tabs-tasks-card>
 
-        <div class="circle-btn">
+        <div
+          class="circle-btn"
+          (click)="openChooseOverlay()"
+        >
           <svg-icon
             [svgStyle]="{
               'height': '2.6vh',
               'width': '4vh'
             }"
             src="assets/Icons/tabs/tasks-tab/accept.svg"
-            (click)="openChooseOverlay()"
           ></svg-icon>
         </div>
       </div>
@@ -37,11 +39,15 @@
         *ngSwitchCase="1"
       >
         <app-tabs-tasks-card
-          *ngFor="let item of (inProgressItems$ | async)"
+          *ngFor="let item of (inProgressItems$ | async); let i = index"
           [data]="item"
+          [isActive]="i === 0"
         ></app-tabs-tasks-card>
 
-        <div class="circle-btn">
+        <div
+          class="circle-btn"
+          (click)="openMap()"
+        >
           <svg-icon
             [svgStyle]="{
               'height': '4.8vh',
