Designed base NFC verify page, implemented step-progress bar component

--- a/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
+++ b/src/app/pages/tabs/pages/tabs-tasks/tabs-tasks.page.html
@@ -20,7 +20,7 @@
           [data]="item"
         ></app-tabs-tasks-card>
 
-        <div class="circle-btn">
+        <div class="circle-btn" (click)="accept()">
           <svg-icon
             [svgStyle]="{
               'height': '2.6vh',
