Implemented verify modal

--- a/src/app/pages/nfc-verify/nfc-verify.page.component.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.component.html
@@ -51,9 +51,10 @@
       }"
   ></svg-icon>
 </div>
+<!--Футер будет заменен-->
 <ion-footer style="background-color: #1C1F2B" class="footer">
   <div class="bottom-buttons-block">
-    <button
+    <button (click)="enableNfc()"
       class="btn btn-margin-bottom">Включить NFC
     </button>
     <button disabled
