--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,22 @@ html, body, .ion-app, .ion-content {
   width: 0;
 }
 
+.nfc-verify-modal {
+  ion-backdrop {
+    opacity: 0.6 !important;
+  }
+  .modal-wrapper {
+    margin-right: sizeHeight(60);
+    margin-left: sizeHeight(60);
+    margin-bottom: sizeHeight(260);
+    width: 100%;
+    height: 58%;
+    border-radius: sizeWidth(15);
+    background: #1C1F2B;
+    overflow: hidden;
+  }
+}
+
 .car-modal {
   .modal-wrapper {
     height: 100%;
