--- a/src/app/pages/nfc-verify/nfc-verify.page.component.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.component.html
@@ -11,7 +11,7 @@
   <span class="task-number-span">{{currentTask.num | splitNumberSign}}</span>
 </app-header>
 <div style="width: 100%; height: 100%; background-color: #1C1F2B;" class="content">
-  <app-step-progress-bar stepsCount="3" activeStepIndex="1">
+  <app-step-progress-bar [stepsCount]="3" [activeStepIndex]="1">
   </app-step-progress-bar>
 
   <div class="task=info-block">
