--- a/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
+++ b/src/app/pages/nfc-verify/components/verify-modal/verify-modal.component.html
@@ -1,38 +1,48 @@
 <div class="container">
-  <div class="header-block">
-    <span class="header">Подтвердите выполнение</span>
-  </div>
-  <div class="info-block">
-    <span class="info-block-header">Выгружены пустые тары (4)</span>
-    <div class="info-block-item">
-      <ion-checkbox checked></ion-checkbox>
-      <span class="light-text">АИ-95</span>
-      <span class="gray-text">2 шт</span>
+  <div class="content">
+    <div class="header-block">
+      <span class="header">Подтвердите выполнение</span>
     </div>
-    <div class="info-block-item">
-      <ion-checkbox checked></ion-checkbox>
-      <span class="light-text">АИ-95</span>
-      <span class="gray-text">2 шт</span>
+    <div class="info-block">
+      <span class="info-block-header">Выгружены пустые тары (4)</span>
+      <div class="info-block-item">
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">АИ-95</span>
+        <span class="gray-text">2 шт</span>
+      </div>
+      <div class="info-block-item">
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">АИ-95</span>
+        <span class="gray-text">2 шт</span>
+      </div>
+      <div class="info-block-item">
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">АИ-95</span>
+        <span class="gray-text">2 шт</span>
+      </div>
     </div>
-    <div class="info-block-item">
-      <ion-checkbox checked></ion-checkbox>
-      <span class="light-text">АИ-95</span>
-      <span class="gray-text">2 шт</span>
+    <div class="info-block">
+      <span class="info-block-header">Загружены пробы (6)</span>
+      <div class="info-block-item">
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">АИ-95</span>
+        <span class="gray-text">2 шт</span>
+      </div>
+      <div class="info-block-item">
+        <ion-checkbox checked></ion-checkbox>
+        <span class="light-text">АИ-95</span>
+        <span class="gray-text">2 шт</span>
+      </div>
     </div>
   </div>
-  <div class="info-block">
-    <span class="info-block-header">Загружены пробы (6)</span>
+  <button class="accept-button">Подтверждаю</button>
+  <div (click)="close()" class="close-button">
+    <svg-icon [svgStyle]="{
+         'width': '2.2vh',
+         'height': '2.2vh'
+       }" class="close-button__icon" src="assets/Icons/shared/close_icon.svg"
+    >
+    </svg-icon>
   </div>
-  <div class="info-block-item">
-    <ion-checkbox checked></ion-checkbox>
-    <span class="light-text">АИ-95</span>
-    <span class="gray-text">2 шт</span>
-  </div>
-  <div class="info-block-item">
-    <ion-checkbox checked></ion-checkbox>
-    <span class="light-text">АИ-95</span>
-    <span class="gray-text">2 шт</span>
-  </div>
-
 </div>
-<button class="accept-button">Подтверждаю</button>
+
