--- a/src/global.scss
+++ b/src/global.scss
@@ -40,18 +40,21 @@ html, body, .ion-app, .ion-content {
   width: 0;
 }
 
-.nfc-verify-modal {
-  ion-backdrop {
-    opacity: 0.6 !important;
-  }
+.nfc-timer-modal {
   .modal-wrapper {
-    margin-right: sizeHeight(60);
-    margin-left: sizeHeight(60);
-    margin-bottom: sizeHeight(260);
     width: 100%;
-    height: 58%;
-    border-radius: sizeWidth(15);
-    background: #1C1F2B;
+    height: 100%;
+    background: #1C1F2BAA;
+    overflow: hidden;
+  }
+}
+
+.nfc-verify-modal {
+  .modal-wrapper {
+
+    width: 100%;
+    height: 100%;
+    background: #1C1F2BAA;
     overflow: hidden;
   }
 }
