--- a/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
+++ b/src/app/pages/nfc-verify/components/nfc-timer-modal/nfc-timer-modal.component.html
@@ -1,6 +1,33 @@
 <div class="container">
-  <p>
-    nfc-timer-modal works!
-  </p>
+  <svg-icon *ngIf="!nfcLabelAccepted" [svgStyle]="{
+         'width': '68vw',
+         'height': '68vw'
+       }" class="timer-external-circle" src="assets/Icons/nfc/timer/external_circle.svg"
+  >
+  </svg-icon>
+  <svg-icon *ngIf="!nfcLabelAccepted" [svgStyle]="{
+         'width': '58vw',
+         'height': '58vw'
+       }" class="timer-internal-circle" src="assets/Icons/nfc/timer/internal_circle.svg">
+  </svg-icon>
+  <svg-icon *ngIf="!nfcLabelAccepted" [svgStyle]="{
+         'width': '50.5vw',
+         'height': '50.5vw'
+       }" class="timer-container" src="assets/Icons/nfc/timer/timer_container_background.svg">
+  </svg-icon>
+  <div *ngIf="!nfcLabelAccepted" class="timer-info-block">
+    <div class="help-text">Поднесите телефон к NFC метке</div>
+    <div class="timer-value-text">35</div>
+  </div>
+  <!--<div class="timer">
+    <svg width="100%" height="100%">
+      <circle class="timer__circle" cx="50%" cy="50%" r="calc(49%)" fill="none" stroke-width="1%" stroke="red"></circle>
+    </svg>
+  </div>-->
+  <svg-icon *ngIf="nfcLabelAccepted" [svgStyle]="{
+         'width': '68vw',
+         'height': '68vw'
+       }" class="timer-external-circle" src="assets/Icons/nfc/timer/timer_success.svg">
+  </svg-icon>
 </div>
 
