--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -3,6 +3,15 @@
   box-sizing: border-box;
 }
 
+.point {
+  position: absolute;
+  background: green;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  z-index: 999;
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -80,15 +89,24 @@
   }
 
   .box {
+    display: flex;
     margin: auto;
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     color: black;
 
     .entry-box {
+      position: relative;
+      display: flex;
       width: 100%;
       height: 100%;
-      background: red;
+      margin: auto;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      margin: auto;
     }
   }
 }
