--- a/src/app/pages/nfc-verify/nfc-verify.page.html
+++ b/src/app/pages/nfc-verify/nfc-verify.page.html
@@ -39,12 +39,23 @@
         </div>
       </div>
       <div class="nfc-icon-block">
-        <svg-icon [svgStyle]="{
+        <div class="nfc-icon-item">
+          <svg-icon [svgStyle]="{
         'width': '55.4vw',
         'height': '55.4vw'
-      }"
-                  src="assets/Icons/nfc/nfc_icon.svg"
-        ></svg-icon>
+      }" class="nfc-stroke"
+                    src="assets/Icons/nfc/nfc_stroke.svg"
+          ></svg-icon>
+          <svg class="nfc_icon_external_circle" height="55.4vw" width="55.4vw">
+            <circle cx="50%" cy="50%" fill="#1C1F2B" r="41%" stroke="#028AFE" stroke-width="2%"></circle>
+          </svg>
+          <svg-icon [svgStyle]="{
+        'width': '21.5vw',
+        'height': '21.5vw'
+      }" class="nfc_connect_icon"
+                    src="assets/Icons/nfc/nfc_connect_icon.svg"
+          ></svg-icon>
+        </div>
       </div>
       <div class="footer">
         <button (click)="enableNfc()"
